    * init_dirscan's search for Makefile.PL's will no longer look
      inside a distdir.
    * Fixed running tests when there are t/'s in subdirs.
    - MM_DOS inheriting from MM_Unix instead of MM_Win32.  DJGPP
      appears to be unix-like (bleadperl@15650)
    - Escaping constants with # in them so they're not confused as
      make comments (bleadperl)

    [[ Doc Fixes ]]
    - Documented INSTALLMAN*DIR == 'none' feature.

    [[ Internals ]]
    - INST_* constants moved to init_INST
    - INSTALL* constants moved to inst_INSTALL
    * Internal warning supression removed.

5.54_01 Sat Mar 30 02:32:44 EST 2002
    [[ New Features ]]
    * Added FULLPERLRUN and FULLPERLRUNINST

    [[ Bug Fixes ]]
    - hint files were made a little too noisy in 5.53_01

    [[ Test Fixes ]]
    - adjusting for NFS time drift
    - basic.t was finding the wrong perl in the core

    [[ Internals ]]
    - FULLPERL* PERL* setup moved to init_PERL

5.53_02 Fri Mar 29 04:47:44 EST 2002
    - Adjusted for Perl core.  Synced into bleadperl.

5.53_01 Fri Mar 29 00:13:02 EST 2002
    [[ Bug Fixes ]]
    - Removed duplicate NAME macro definition
    - Fixed makemakerdflt target for VMS
    * bleadperl@11460 introduced a bug with recursive Makefile.PL's not
      having '.' in @INC.  PDL should build now.
    * MANIFEST.SKIP only working on file names, not full relative paths.
      Only since 5.51_01  (RT 413)
    * make test TEST_VERBOSE=1 was busted by 5.50_01 (RT 423)
    * Error messages from dying Makefile.PL's and hint files were
      accidentally supressed in 5.48_04.  Fixed.
    * Makefile.PL's are supposed to be run in package main.  5.48_04
      broke this.  Fixed.
    * Fixing installing on VMS.

5.52_01 Tue Mar 26 00:24:26 EST 2002
    [[ Bug Fixes ]]
    * ActivePerl 5.6.1/build 631 now 100%
    - Fixed some SelfLoader warnings
    * ExtUtils::MM_Win32 not subclassed off of ExtUtils::MM_Any properly
    - Bug in local $ENV{FOO} was causing failures in MM_Win32 tests.