@@ -191,7 +191,8 @@ sub constants {
 	      PERL_ARCHLIB SITELIBEXP SITEARCHEXP LIBPERL_A MYEXTLIB
 	      FIRST_MAKEFILE MAKE_APERL_FILE PERLMAINCC PERL_SRC
 	      PERL_INC PERL FULLPERL PERLRUN FULLPERLRUN PERLRUNINST 
-          FULLPERLRUNINST FULL_AR PERL_CORE
+          FULLPERLRUNINST ABSPERL ABSPERLRUN ABSPERLRUNINST
+          FULL_AR PERL_CORE
 
 	      / ) {
 	next unless defined $self->{$tmp};
