@@ -15,6 +15,8 @@
       appears to be unix-like (bleadperl@15650)
     - Escaping constants with # in them so they're not confused as
       make comments (bleadperl)
+    * ExtUtils::MM_Win95 didn't return a true value
+    - Fixing disttest when perl is a relative path.
 
     [[ Doc Fixes ]]
     - Documented INSTALLMAN*DIR == 'none' feature.
@@ -190,7 +192,7 @@
 5.48_04 Mon Jan 21 19:28:38 EST 2002
     - No longer requiring Test::More
     - Now tested to work with a clean 5.6.1
-    - Stripped out $Revision: 1.37 $ based $VERSIONs.
+    - Stripped out $Revision: 1.38 $ based $VERSIONs.
     - Rolled in patches from p5p, vmsperl & VOS (14325, 14338, 14360, 14364)
     * hint files now run in a safer context.  Only $self is available.
     - ExtUtils::testlib now provides absolute paths into @INC.
